Renamed App.js to App.jsx, updated imports, and fixed JSX syntax

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,6 @@
     <div id="root"></div> <!-- React will inject the app here -->
 
     <!-- Vite injects the bundle script automatically -->
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
